--- a/sekce/5-zaver.tex
+++ b/sekce/5-zaver.tex
@@ -40,15 +40,15 @@ termočlánek a~jak tyto dva pojmy spolu souvisí. Poté jsme si popsali sestave
 vlastního termočlánku, pro který jsme následně změřili a~za pomoci lineární
 regrese určili parametr. Ten byl pomocí rovnice~\ref{eq:thermo_param} stanoven
 % Vyměnila bych "určen" za "stanoven" kvůli vazbě s "na", která je s "určen" nepřirozená.
-na hodnotu $\alpha="0.036~2 mV.\C"$. Tento výsledek můžeme porovnat
-i~s~výpočtem provedeným programem (v našem případě se jednalo o MS~Excel).
-Lze pozorovat rovnající se výsledky, což svědčí o korektnosti výpočtu.
+na  hodnotu~$\alpha="0.036~2 mV.\C"$. Tento výsledek můžeme porovnat
+i~s~výpočtem provedeným programem (v~našem případě se jednalo o~MS~Excel).
+Lze pozorovat rovnající se výsledky, což svědčí o~korektnosti výpočtu.
 % "úspěšný výpočet" se mi nelíbí, spíš bych dala "správný", nebo "odpovídá <něčemu>"
 
 V~sekci~\ref{sec:presnost} jsme si také ukázali, jak vypočítat koeficient
 přesnosti naší prokládané funkce, který nám vyšel~$R^2="95.85 \%"$, čímž
 potvrzujeme správnost našeho modelu.
 
-Určením koeficientu sestaveného termočlánku a přesnosti měření jsme se
+Určením koeficientu sestaveného termočlánku a~přesnosti měření jsme se
 dopracovali k~cíli naší práce, tedy můžeme tuto seminární práci považovat za
 úspěšnou.
