--- a/sekce/figures.tex
+++ b/sekce/figures.tex
@@ -1,8 +1,8 @@
-\fullfig[width=0.65\textwidth]{voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
+\fullfig[width=0.65\textwidth][p]{voltmetr.jpg}[Použitý milivoltmetr][fig:voltmetr]
 
-\fullfig[width=0.9\textwidth]{aparatura.jpg}[Aparatura experimentu]
+\fullfig[width=0.9\textwidth][p]{aparatura.jpg}[Aparatura experimentu]
 
-\fullfig[width=0.6\textwidth]{aparatura_detail.jpg}[Detail ponoření termočlánků v kapalinách]
+\fullfig[width=0.6\textwidth][p]{aparatura_detail.jpg}[Detail ponoření termočlánků v kapalinách]
 
 \begin{figure}[htpb]
     \hfill
