--- a/sekce/1-uvod.tex
+++ b/sekce/1-uvod.tex
@@ -23,7 +23,7 @@ naší funkce odpovídá naměřeným datům, vypočítat neznámý parametr př
 vyjádřit závislou veličinu pro zatím neměřené vstupní hodnoty (např.~predikce
 %infinitiv kvůli zachování jednotnosti věty
 počtu nakažených nemocí). Máme více možností, jak tohoto proložení dosáhnout,
-přičemž jednou z nejrozšířenějších je metoda nejmenších čtverců.
+přičemž jednou z~nejrozšířenějších je metoda nejmenších čtverců.
 
 %Abychom mohli data proložit křivkou, musíme znát její parametry. Ty mohou být
 %určeny pomocí metody nejmenších čtverců. Nemůžeme ale vytvářet křivky bez
