key words update

--- a/sekce/souhrn.tex
+++ b/sekce/souhrn.tex
@@ -36,10 +36,10 @@ issue is given.
     Klíčová slova (Key words)}
 
 \paragraph{Klíčová slova}
-aproximace, interpolace, metoda nejmenších čtverců, termoelektrický jev, 
-Seebeckův jev, Peltierův jev, termočlánek
+aproximace, interpolace, lineární regrese, metoda nejmenších čtverců,
+termoelektrický jev, Seebeckův jev, Peltierův jev, termočlánek
 
 \paragraph{Key words}
-approximation, interpolation, least squares method, thermoelectric effect, 
-Seebeck effect, Peltier effect, thermocouple
+approximation, interpolation, linear regression, least squares method,
+thermoelectric effect, Seebeck effect, Peltier effect, thermocouple
 
