--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -1,10 +1,10 @@
 \subsection{Termoelektrický jev}
 \subsubsection{Efekty termoelektrické jevu}
 \label{sec:efekty-termoelektrika}
-Termoelektrický jev se vyznačuje přímou konverzí tepla na elektrické napětí
-a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své podstatě je
-sdružením čtyř efektů pod jeden název: efektu Seebeckova, Peltierova,
-Thomsonova a~Benedickova.~\mcite{praktikum,diplomka}
+Termoelektrický jev se vyznačuje přímou konverzí rozdílu teplot na elektrické
+napětí a~naopak. Objevuje se vždy u~spojené dvojce různých kovů a~ve své
+podstatě je sdružením čtyř efektů pod jeden název: efektu Seebeckova,
+Peltierova, Thomsonova a~Benedickova.~\mcite{praktikum,diplomka}
 
 Termoelektrické napětí~$E$ vzniká mezi spoji kovů a~je závislé na funkci
 rozdílu teplot~$\Delta T = T_1 - T_2$. Je vyjádřeno pomocí vztahu
