--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -1,4 +1,4 @@
-% Odchylky přímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/prime_mereni.pdf
+	% Odchylky přímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/prime_mereni.pdf
 % Odchylky nepřímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/neprime_mereni.pdf
 
 \section{Výsledky}
@@ -102,7 +102,7 @@ celé měření provádíme.
 V~sekci~\ref{sec:efekty-termoelektrika} jsme si řekli, že za podmínky nízkého
 rozdílu teplot můžeme termoelektrické napětí popsat pomocí rovnice
 \eq{
-    E = \alpha\Delta T\,.\lbl{eq:E}\,,
+	E = \alpha\Delta T\,.\lbl{eq:E}\,,
 }
 přičemž pro termočlánek typu~T je závislost lineární zhruba do~$"200 \C"$, což
 naše data pohodlně splňují.~\cite{thermocoupleinfo}
@@ -112,8 +112,8 @@ prochází nulou a~vyskytuje se v~ní pouze jedna neznámá: $\alpha$. Tím pád
 nemusíme pro výpočet parametru používat rovnici~\eqref{eq:a}, ale můžeme jej
 vyjádřit pomocí zjednodušeného tvaru
 \eq{
-    a = \frac{\nsumxy}{\nsumxx} \ztoho \alpha = \frac{\nsum \Delta T_i*E_i}
-    {\nsum \(\Delta T_i\)^2}\lbl{eq:thermo_param}\,,
+	a = \frac{\nsumxy}{\nsumxx} \ztoho \alpha = \frac{\nsum \Delta T_i*E_i}
+	{\nsum \(\Delta T_i\)^2}\lbl{eq:thermo_param}\,,
 }
 který získáváme při aplikaci postupu v~sekci~\ref{sec:lin-regrese} na 
 funkci~\eqref{eq:E}. 
@@ -137,33 +137,7 @@ Měření napětí bylo provedeno dvakrát, v~obou případech při snižování
 teplot, tedy ochlazování teplého konce termočlánku.
 
 % tabulka dat
-\begin{table}[htbp]
-    \centering
-    \begin{tabular}{r|cccc|cc}
-        \toprule
-        $i$ & \popi{\Delta T}{\C} & \popi{E_1}{mV} & \popi{E_2}{mV} & \popi{\avg{E}}{mV} &
-        \popi{\(\Delta T\)^2}{\C^2} & \popi{\Delta T * \avg{E}}{mV\C}\\
-        \midrule
-        $"1"$  & $"80"$ & $"2,8"$ & $"2,8"$ & $"2,8"$ & $"6~400"$ & $"224,0"$ \\
-        $"2"$  & $"75"$ & $"2,8"$ & $"2,6"$ & $"2,7"$ & $"5~625"$ & $"202,5"$ \\
-        $"3"$  & $"70"$ & $"2,6"$ & $"2,4"$ & $"2,5"$ & $"4~900"$ & $"175,0"$ \\
-        $"4"$  & $"65"$ & $"2,4"$ & $"2,2"$ & $"2,3"$ & $"4~225"$ & $"149,5"$ \\
-        $"5"$  & $"60"$ & $"2,2"$ & $"2,0"$ & $"2,1"$ & $"3~600"$ & $"126,0"$ \\
-        $"6"$  & $"55"$ & $"2,0"$ & $"2,0"$ & $"2,0"$ & $"3~025"$ & $"110,0"$ \\
-        $"7"$  & $"50"$ & $"1,8"$ & $"1,8"$ & $"1,8"$ & $"2~500"$ & $"90,0"$  \\
-        $"8"$  & $"45"$ & $"1,8"$ & $"1,6"$ & $"1,7"$ & $"2~025"$ & $"76,5"$  \\
-        $"9"$  & $"40"$ & $"1,6"$ & $"1,4"$ & $"1,5"$ & $"1~600"$ & $"60,0"$  \\
-        $"10"$ & $"35"$ & $"1,2"$ & $"1,4"$ & $"1,3"$ & $"1~225"$ & $"45,5"$  \\
-        $"11"$ & $"30"$ & $"1,2"$ & $"1,2"$ & $"1,2"$ & $"\phantom{0 }900"$   & $"36,0"$  \\
-        $"12"$ & $"25"$ & $"1,0"$ & $"1,0"$ & $"1,0"$ & $"\phantom{0 }625"$   & $"25,0"$  \\
-        $"13"$ & $"20"$ & $"1,0"$ & $"1,0"$ & $"1,0"$ & $"\phantom{0 }400"$   & $"20,0"$  \\
-        \midrule
-        \multicolumn{5}{r|}{$\sum$} & $"37~050"$ & $"1~340.0"$\\
-        \bottomrule
-    \end{tabular}
-    \caption{Naměřená data}
-    \label{tab:data}
-\end{table}
+\subfile{table_mereni.tex}
 
 Z~těchto dat můžeme vytvořit graf~\ref{graph:data} znázorňující jednotlivé 
 datové body společně
@@ -173,7 +147,7 @@ s~proloženou funkcí, jejíž předpis je shodný s~rovnicí~\ref{eq:E}.
 V~tomto předpisu neznáme parametr~$\alpha$, jenž je ale vypočítatelný
 z~rovnice~\ref{eq:thermo_param} a~jeho hodnota je
 \eq{
-    \alpha = "0.036~2 mV.\C^{-1}"\,.
+	\alpha = "0.036~2 mV.\C^{-1}"\,.
 }
 
 \plotfig{graf/data.tex}[Graf naměřených dat][graph:data]
@@ -188,13 +162,13 @@ ať už to je chyba statistická či systematická. V~našem případě budeme c
 spočítat, jak moc naměřená data odpovídají vypočítanému modelu. K~takovému
 popisu se často ve statistice používá hodnota označovaná jako~$R^2$ s~definicí
 \eq{
-    R^2 = 1 - \frac{\nsum (y_i - \hat y)^2}{\nsum (y_i - \avg y)^2}\,.
+	R^2 = 1 - \frac{\nsum (y_i - \hat y)^2}{\nsum (y_i - \avg y)^2}\,.
 }
 Zde $\avg y$ značí průměr všech naměřených hodnot, $\hat y$~je předpovídaná
 hodnota dle modelu a~$y_i$ představuje jednotlivé naměřené hodnoty. Přepsaná do
 našich hodnot nabývá rovnice tvaru
 \eq{
-    R^2 = 1 - \frac{\nsum (E_i - \alpha\Delta T_i)^2}{\nsum (E_i - \avg E)^2}\,.
+	R^2 = 1 - \frac{\nsum (E_i - \alpha\Delta T_i)^2}{\nsum (E_i - \avg E)^2}\,.
 }
 
 Po využití tohoto vztahu\footnote{Do vztahu jsou doplněna všechna naměřená data
