--- a/prezentace.tex
+++ b/prezentace.tex
@@ -75,7 +75,7 @@ metody nejmenších čtverců}
 		\item metoda pro nalezení parametrů předpisu funkce
 		\item minimalizace druhých mocnin odchylek dat a funkce 
 	\end{itemize}
-	\begin{block}{Hledání minimum funkce}
+	\begin{block}{Hledání minima funkce}
 	\vspace*{-0.2\baselineskip}\setlength\belowdisplayshortskip{0pt}
 	\eq{S=\sumi\(y_i-f(x_i)\)^2}
 	\end{block}
@@ -124,7 +124,7 @@ metody nejmenších čtverců}
 				\item spojení dvou druhů kovů
 				\item rozdíl teplot spojů vede k vytvoření napětí
 				\item různé kombinace kovů -- různé vlastnosti
-				\item standart IEC 584
+				\item standard IEC 584
 			\end{itemize}
 		\end{column}
 		\begin{column}{0.4\textwidth}
@@ -200,9 +200,9 @@ metody nejmenších čtverců}
 \begin{frame}
 	\frametitle{Diskuze}
 	\begin{itemize}
-		\item provedení experiment vícekrát
-		\item použití digitální voltmetr
-		\item provedení experiment při zahřívání i ochlazování
+		\item provedení experimentu vícekrát
+		\item použití digitálního voltmetru
+		\item provedení experimentu při zahřívání i ochlazování
 	\end{itemize}
 \end{frame}
 
