--- a/prezentace.tex
+++ b/prezentace.tex
@@ -54,15 +54,14 @@ metody nejmenších čtverců}
 	\end{itemize}	
 \end{frame}
 
-
-\begin{frame}
-	\frametitle{Úvod}
-	\framesubtitle{Zdroje}
-	\begin{itemize}
-		\item využito 11 zdrojů
-		\item internetové zdroje, vysokoškolské skripta, bakalářské práce\dots
-	\end{itemize}
-\end{frame}
+%\begin{frame}
+%	\frametitle{Úvod}
+%	\framesubtitle{Zdroje}
+%	\begin{itemize}
+%		\item využito 11 zdrojů
+%		\item internetové zdroje, vysokoškolské skripta, bakalářské práce\dots
+%	\end{itemize}
+%\end{frame}
 
 %\section{Současný stav problematiky} \subsection{Proložení dat funkcí}
 %
@@ -247,7 +246,7 @@ metody nejmenších čtverců}
 	\frametitle{Diskuze}
 	\begin{itemize}
 		\item odlišná vypočtená a tabulková hodnota, malý rozptyl 
-			hodnot~$\rightarrow$ systémová chyba
+			hodnot~$\rightarrow$ systematická chyba
 		\item provedení experimentu vícekrát
 		\item použití digitálního voltmetru
 		\item provedení experimentu při zahřívání i ochlazování
@@ -264,8 +263,8 @@ metody nejmenších čtverců}
 		\item nutno měřit koeficienty pro každou dvojici kovů
 		\item termočlánek typu T
 			\begin{itemize}
-				\item tabulková hodnota: $\alpha = "0.036~2 mV.C^{-1}"$
-				\item experimentální hodnota: $\alpha = "0.042 mV.C^{-1}"$
+				\item experimentální hodnota: $\alpha = "0.036~2 mV.C^{-1}"$
+				\item tabulková hodnota: $\alpha = "0.042 mV.C^{-1}"$
 			\end{itemize}
 		\item přesnost našeho měření: $R^2="0.958~5"="95.85 \%"$
 	\end{itemize}
